# fh-ANGUS

./: README.md
dylib/: libsdformat_urdf_plugin.dylib
src/turtlebot3_drl/turtlebot3_drl/common/: graph.py  settings.py  storagemanager.py  utilities.py
src/turtlebot3_drl/turtlebot3_drl/drl_agent/: ddpg.py
src/turtlebot3_drl/turtlebot3_drl/drl_environment/: reward.py
src/turtlebot3_drl/turtlebot3_drl/drl_gazebo/: drl_gazebo.py  drl_gazebo_fbe.py  model.sdf
src/turtlebot3_explore/config/: params.yaml
src/turtlebot3_explore/include/explore/: frontier_search.h
src/turtlebot3_explore/src/: costmap_client.cpp  explore_DRL_backup.cpp
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: E1.launch.py  E2.launch.py  E3.launch.py  FBE_world_1.launch.py  FBE_world_2.launch.py  FBE_world_3.launch.py  FBE_world_5.launch.py  _turtlebot3_drl_stage0.launch.py  _turtlebot3_drl_stage10.launch.py  _turtlebot3_world.launch.py  robot_state_publisher.launch.py  turtlebot3_drl_stage0.launch.py  turtlebot3_drl_stage1.launch.py  turtlebot3_drl_stage2.launch.py  turtlebot3_drl_stage3.launch.py  turtlebot3_drl_stage4.launch.py  turtlebot3_drl_stage5.launch.py  turtlebot3_drl_stage6.launch.py  turtlebot3_drl_stage7.launch.py  turtlebot3_drl_stage8.launch.py  turtlebot3_drl_stage9.launch.py  turtlebot3_house.launch.py  turtlebot3_world.launch.py
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle/: model-1_4.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle_pi/: model-1_4_.sdf  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/E1/: waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/E2/: waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/E3/: waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/FBE_World_3/: burger.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/FBE_World_5/: _waffle_pi.model  waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage0/: waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage4/: burger.model  waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage6/: waffle_pi.model
turtlebot3_drl/: setup.py
turtlebot3_drl/turtlebot3_drl/common/: manualaction.py  visual.py
turtlebot3_drl/turtlebot3_drl/drl_agent/: drl_agent.py  off_policy_agent.py  td3.py
turtlebot3_drl/turtlebot3_drl/drl_environment/: drl_environment.py
turtlebot3_drl/turtlebot3_drl/drl_gazebo/: real_goal.py
turtlebot3_explore/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_explore/config/: params_costmap.yaml
turtlebot3_explore/include/explore/: costmap_client.h  explore.h
turtlebot3_explore/launch/: explore_DRL.launch.py  explore_nav2.launch.py
turtlebot3_explore/src/: explore_DRL.cpp  explore_nav2 copy.cpp  explore_nav2.cpp  frontier_search.cpp
turtlebot3_msgs/: CMakeLists.txt
turtlebot3_msgs/srv/: DrlFbeStep.srv
turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_drl_stage10.launch.py  turtlebot3_world.launch.py
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model-1_4.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle_pi/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/worlds/FBE_World_1/: waffle_pi.model
turtlebot3_simulations/turtlebot3_gazebo/worlds/FBE_World_2/: waffle_pi.model
turtlebot3_simulations/turtlebot3_gazebo/worlds/FBE_World_3/: waffle_pi.model
turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage10/: waffle_pi.model
(+54 files in other folders)
